Merged revisions 85062 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

........
  r85062 | ronald.oussoren | 2010-09-28 16:38:31 +0200 (Tue, 28 Sep 2010) | 3 lines

  Fix for issue #9568.
........