Mac/Modules/_scproxy.c
@@ -73,7 +73,7 @@ get_proxy_settings(PyObject* mod __attribute__((__unused__)))
             v = PyBool_FromLong(cfnum_to_int32(aNum));
         }
     }  else {
-        v = PyBool_FromLong(1);
+        v = PyBool_FromLong(0);
     }
 
     if (v == NULL) goto error;
